# Difference-generator-for-JSON-and-YAML-files

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
gendiff/: __init__.py  cli.py  constants.py  gendiff_dev.py  generate_diff.py
gendiff/scripts/: experiments.py  gendiff.py  test.py
gendiff/scripts/formatters/: json.py  plain.py  stylish.py  tools.py
tests/: test generate_diff.py  test_formatters.py  test_gendiff.py  test_plain.py  test_sylish.py
tests/fixtures/: diff_result.txt
tests/fixtures/formatters/: diff_fixture.py
tests/fixtures/json/: file2.json  file3.json  file5.json  json_result.txt  json_result2.txt  test.json
tests/fixtures/yaml/: file2.yml
