[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = ""
authors = ["algos <algos.inc@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
#PyYAML = "^5.4.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
