[tool.poetry]
name = "hexlet-code"
version = "1.0"
description = ""
authors = ["algos"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
coverage = "^6.1.1"
PyYAML = "^6.0"
pytest-cov = "^3.0.0"
[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
